--- a/internal/translations/locales/de-DE/messages.gotext.json
+++ b/internal/translations/locales/de-DE/messages.gotext.json
@@ -361,6 +361,22 @@
             "translation": "Wo findet die Veranstaltung statt?  Gebe den Namen oder die Adresse des Orts so an, wie man es bei Google Maps eingeben würde."
         },
         {
+            "id": [
+                "SET_NOTES",
+                "Specify any additional notes you'd like to show about the event."
+            ],
+            "message": "Specify any additional notes you'd like to show about the event.",
+            "translation": "Gib beliebige weitere Informationen an, die zur Veranstaltung angezeigt werden sollen."
+        },
+        {
+            "id": [
+                "SET_NOTES_2",
+                "If you don't have any notes, just click /skip."
+            ],
+            "message": "If you don't have any notes, just click /skip.",
+            "translation": "Wenn Sie keine Notizen haben, klicken Sie einfach auf /skip."
+        },
+        {
             "id": "error creating event: {Err}",
             "message": "error creating event: {Err}",
             "translation": "Fehler bei der Erstellung des Events: {Err}",
@@ -394,11 +410,6 @@
             "id": "Specify the name of the person hosting the event.",
             "message": "Specify the name of the person hosting the event.",
             "translation": "Gib den Namen des Veranstalters an."
-        },
-        {
-            "id": "Specify any additional notes you'd like to show about the event.",
-            "message": "Specify any additional notes you'd like to show about the event.",
-            "translation": "Gib beliebige weitere Informationen an, die zur Veranstaltung angezeigt werden sollen."
         },
         {
             "id": "Specify the date on which this event takes place:",
@@ -776,7 +787,7 @@
         {
             "id": "In which time zone do you live?\nYou can either send one of the time zones on \u003ca href=\"https://github.com/Lewington-pitsos/golang-time-locations\"\u003ethis\u003c/a\u003e list,\nor you can send your current 📍 Location by clicking the paperclip and choosing Location.",
             "message": "In which time zone do you live?\nYou can either send one of the time zones on \u003ca href=\"https://github.com/Lewington-pitsos/golang-time-locations\"\u003ethis\u003c/a\u003e list,\nor you can send your current 📍 Location by clicking the paperclip and choosing Location.",
-            "translation": "In welcher Zeitzone leben Sie?\nSie können entweder eine der Zeitzonen auf <a href=\"https://github.com/Lewington-pitsos/golang-time-locations\">dieser</a> Liste senden,\nOder Sie können Ihren aktuellen \uD83D\uDCCDStandort senden, indem Sie auf die Büroklammer klicken und Standort auswählen."
+            "translation": "In welcher Zeitzone leben Sie?\nSie können entweder eine der Zeitzonen auf \u003ca href=\"https://github.com/Lewington-pitsos/golang-time-locations\"\u003edieser\u003c/a\u003e Liste senden,\nOder Sie können Ihren aktuellen 📍Standort senden, indem Sie auf die Büroklammer klicken und Standort auswählen."
         },
         {
             "id": "Specified Time Zone not found.",
