--- a/internal/translations/locales/de-DE/out.gotext.json
+++ b/internal/translations/locales/de-DE/out.gotext.json
@@ -770,6 +770,16 @@
             "translation": "📩 Mit einem anderen Chat teilen..."
         },
         {
+            "id": "You're ✅ planning or 🤔️ considering attending the following events.  Click an event for more info.",
+            "message": "You're ✅ planning or 🤔️ considering attending the following events.  Click an event for more info.",
+            "translation": "Sie ✅ planen oder 🤔️ erwägen die Teilnahme an den folgenden Veranstaltungen. Klicken Sie auf eine Veranstaltung, um weitere Informationen zu erhalten."
+        },
+        {
+            "id": "Not an event you are attending.",
+            "message": "Not an event you are attending.",
+            "translation": ""
+        },
+        {
             "id": "👉 CLICK TO ACTIVATE EVENT 👈",
             "message": "👉 CLICK TO ACTIVATE EVENT 👈",
             "translation": "👉 VERANSTALTUNG AKTIVIEREN 👈"
@@ -865,6 +875,11 @@
             "translation": "Erfahren mehr über den Bot"
         },
         {
+            "id": "See a list of all events you RSVPd to",
+            "message": "See a list of all events you RSVPd to",
+            "translation": "Sehen Sie sich eine Liste aller Ereignisse an, zu denen Sie zugestimmt haben"
+        },
+        {
             "id": "Let's create some new plans.  First, send me the name of the event.",
             "message": "Let's create some new plans.  First, send me the name of the event.",
             "translation": "Lass uns eine neue Veranstaltung erstellen.  Schick mir als erstes den Namen."
@@ -882,7 +897,7 @@
         {
             "id": "This project is open source! Learn more at: https://github.com/avwuff/telegram-plans-bot",
             "message": "This project is open source! Learn more at: https://github.com/avwuff/telegram-plans-bot",
-            "translation": ""
+            "translation": "Dieses Projekt ist Open Source! Erfahren Sie mehr unter: https://github.com/avwuff/telegram-plans-bot"
         },
         {
             "id": "I don't understand that command. Send /help for help.",
