--- a/internal/translations/locales/en-US/messages.gotext.json
+++ b/internal/translations/locales/en-US/messages.gotext.json
@@ -269,14 +269,14 @@
         {
             "id": "👫 Set Max Attendees",
             "message": "👫 Set Max Attendees",
-            "translation": "👫 Set Max Attendees",
+            "translation": "👫 Max People",
             "translatorComment": "Copied from source.",
             "fuzzy": true
         },
         {
             "id": "💔 Allow Maybe: {SprintfYes}",
             "message": "💔 Allow Maybe: {SprintfYes}",
-            "translation": "💔 Allow Maybe: {SprintfYes}",
+            "translation": "💔 Maybe: {SprintfYes}",
             "translatorComment": "Copied from source.",
             "placeholders": [
                 {
@@ -307,8 +307,8 @@
         {
             "id": "📩 Allow Sharing: {SprintfNo}",
             "message": "📩 Allow Sharing: {SprintfNo}",
-            "translation": "📩 Allow Sharing: {SprintfNo}",
-            "translatorComment": "Copied from source.",
+            "translation": "📩 Can Share: {SprintfNo}",
+            "translatorComment": "",
             "placeholders": [
                 {
                     "id": "SprintfNo",
@@ -324,8 +324,8 @@
         {
             "id": "⚙ Advanced Options...",
             "message": "⚙ Advanced Options...",
-            "translation": "⚙ Advanced Options...",
-            "translatorComment": "Copied from source.",
+            "translation": "⚙ Advanced",
+            "translatorComment": "",
             "fuzzy": true
         },
         {
